<resources>
    <string name="app_name">Metronom</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="indicator">INDICATOR</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="incorrect_input">incorrect input</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_the_tempo">enter the tempo</string>
    <string name="enter_number">enter number</string>
    <string name="start_tg">start</string>
    <string name="bpm">bpm</string>
    <string name="text_100">100</string>
    <string name="set_bpm_you_need_below">SET BPM YOU NEED BELOW</string>
    <string name="sound">SOUND</string>
    <string name="flash">FLASH</string>
    <string name="vibration">VIBRATION</string>
</resources>
